...
            );
          })
        )}

        {playingNidra && (
          <Button
            label={status === 'playing' ? 'Pausar' : 'Continuar'}
            variant="secondary"
            onPress={toggle}
          />
        )}
        {playingNidra && (
          <>
...
